--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,2 +1,7 @@
-<h1>Pages#index</h1>
-<p>Find me in app/views/pages/index.html.erb</p>
+<h1>Sample App</h1>
+<p>
+  This is the home page for the <a href="http://railstutorial.org"> 
+  Ruby on Rails Tutorial</a> Sample application.
+</p>		
+
+
