--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,4 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
-<%= "User name is: #{@user.name} and their email is: #{@user.email}" %>
+<h1>
+<%= gravatar_for @user %>
+  <%= @user.name %>
+</h1>
