--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,7 @@
 <h1>Sign up</h1>
+
 <%= form_for(@user) do |f| %>
+  <%= render 'shared/error_messages' %>
 
   <div  class="field">
     <%= f.label :name %>
@@ -9,11 +11,6 @@
   <div  class="field">
     <%= f.label :email %>
     <%= f.text_field :email %>
-  </div>
-
-  <div  class="field">
-    <%= f.label :name %>
-    <%= f.text_field :name %>
   </div>
 
   <div  class="field">
