--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,28 +1,9 @@
 <h1>Sign up</h1>
 
 <%= form_for(@user) do |f| %>
-  <%= render 'shared/error_messages' %>
 
-  <div  class="field">
-    <%= f.label :name %>
-    <%= f.text_field :name %>
-  </div>
-
-  <div  class="field">
-    <%= f.label :email %>
-    <%= f.text_field :email %>
-  </div>
-
-  <div  class="field">
-    <%= f.label :password %>
-    <%= f.password_field :password %>
-  </div>
-
-  <div  class="field">
-    <%= f.label :password_confirmation, "Confirmation" %>
-    <%= f.password_field :password_confirmation %>
-  </div>
-
+  <%= render 'fields', :f => f %>
+  
   <div  class="actions">
     <%= f.submit "Sign up" %>
   </div>
