--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -187,3 +187,11 @@ label {
 	font-size: 12px;
 	list-style: square;
 }
+
+ul.users {
+  margin-top: 1em;
+}
+
+ul.users li {
+  list-style: none;
+}
