--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,10 +1,22 @@
 <h1>All users</h1>
 
+<%= will_paginate %>
+
 <ul  class="users">
-  <% @users.each do |user| %>
-    <li>
-      <%= gravatar_for user, :size => 30 %>
-      <%= link_to user.name, user %>
-    </li>
-  <% end %>
+
+  # The following 3 blocks do the same thing.
+  # They do it with less code progressively
+
+  <%# @users.each do |user| %>
+    <%#=  render 'user', :user => user %>
+  <%# end %>
+
+    <%# @users.each do |user| %>
+    <%#=  render user %>
+    <%# end %>
+
+    <%=  render @users %>
+
 </ul>
+
+<%= will_paginate %>
