--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -5,4 +5,21 @@
       Posted <%= time_ago_in_words(micropost.created_at) %> ago.
     </span>
   </td>
+<!--
+    <%# if current_user?(micropost.user) %>
+
+    The above line sometimes raised an exception.
+    So we eplace it with the current two lines.
+    
+    <%# user =  micropost.use rescue User.find(micropost.user_id)%>
+    <%# if current_user?(user) %>
+-->
+  <% user =  micropost.user rescue User.find(micropost.user_id)%>
+  <% if current_user?(user) %>
+    <td>
+      <%= link_to "delete", micropost, :method => :delete,
+                                                        :confirm => "Are you sure?",
+                                                        :title => micropost.content %>
+    </td>
+  <% end %>    
 </tr>
